# ast-demangle

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/mini-parser/: Cargo.toml
crates/mini-parser/src/: generic_tuple.rs  lib.rs
crates/mini-parser/src/combinators/: alt.rs  delimited.rs  flat_map.rs  inspect.rs  many0.rs  map.rs  map_opt.rs  mod.rs  opt.rs  or.rs  preceded.rs  terminated.rs  tuple.rs
fuzz/: Cargo.toml
fuzz/fuzz-targets/: fuzz-target.rs  rust-v0-demangle-reference.rs  rust-v0-demangle.rs
src/: lib.rs
src/mini_parser/: generic_tuple.rs  input.rs  mod.rs
src/mini_parser/combinators/: alt.rs  and.rs  delimited.rs  flat_map.rs  inspect_with_context.rs  many0.rs  map.rs  map_opt.rs  map_opt_with_context.rs  mod.rs  opt.rs  or.rs  preceded.rs  terminated.rs  tuple.rs
src/mini_parser/parsers/: alphanumeric0.rs  digit1.rs  lower_hex_digit0.rs  mod.rs  tag.rs  take.rs  take_while.rs  take_while1.rs
src/rust_v0/: context.rs  demangle.rs  display.rs  mod.rs  tests.rs
src/rust_v0/parsers/: mod.rs  tests.rs
test-utilities/: Cargo.toml
test-utilities/src/: lib.rs
tests/: test-against-rustc-demangle-data.txt  test-against-rustc-demangle.rs
tools/verify-against-rustc-demangle/: Cargo.toml
tools/verify-against-rustc-demangle/src/: main.rs
