[package]
authors = ["EFanZh <efanzh@gmail.com>"]
categories = ["compilers"]
description = "Parses mangled names and produces structured results."
edition = "2021"
keywords = ["demangle"]
license = "MIT"
name = "ast-demangle"
repository = "https://github.com/EFanZh/ast-demangle"
version = "0.4.0"

[workspace]
members = ["crates/mini-parser", "fuzz", "test-utilities"]

[dependencies]
fmt-tools = "0.1"
mini-parser = { path = "crates/mini-parser" }
num-traits = "0.2"
punycode = "0.4"

[dev-dependencies]
rustc-demangle = "0.1"
test-utilities = { path = "test-utilities" }
