[package]
edition = "2021"
name = "ast-demangle-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
ast-demangle = { path = ".." }
libfuzzer-sys = "*"
rustc-demangle = "0.1"
test-utilities = { path = "../test-utilities" }

[[bin]]
doc = false
name = "rust-v0-demangle"
path = "fuzz-targets/rust-v0-demangle.rs"
test = false

[[bin]]
doc = false
name = "rust-v0-demangle-reference"
path = "fuzz-targets/rust-v0-demangle-reference.rs"
test = false
